Merge changes from osm_1.3.2 branch