@@ -38,6 +38,7 @@ import java.util.Date;
 import java.util.TimeZone;
 import java.util.Vector;
 import java.util.concurrent.CancellationException;
+import java.util.concurrent.Executor;
 
 import nl.sogeti.android.gpstracker.R;
 import nl.sogeti.android.gpstracker.actions.utils.ProgressListener;
@@ -55,6 +56,7 @@ import android.content.ContentValues;
 import android.content.Context;
 import android.net.Uri;
 import android.os.AsyncTask;
+import android.os.Build;
 import android.util.Log;
 import android.view.Window;
 
@@ -95,6 +97,18 @@ public class GpxParser extends AsyncTask<Uri, Void, Uri>
       mContext = context;
       mProgressListener = progressListener;
       mContentResolver = mContext.getContentResolver();
+   }
+   
+   public void executeOn(Executor executor)
+   {
+      if (Build.VERSION.SDK_INT >= 11)
+      {
+         executeOnExecutor(executor);
+      }
+      else
+      {
+         execute();
+      }
    }
    
    public void determineProgressGoal(Uri importFileUri)
@@ -150,7 +164,7 @@ public class GpxParser extends AsyncTask<Uri, Void, Uri>
       boolean elevation = false;
       boolean name = false;
       boolean time = false;
-      Long importDate = new Long(new Date().getTime());
+      Long importDate = Long.valueOf(new Date().getTime());
       try
       {
          XmlPullParserFactory factory = XmlPullParserFactory.newInstance();
@@ -364,19 +378,19 @@ public class GpxParser extends AsyncTask<Uri, Void, Uri>
             case 20:
                synchronized (ZULU_DATE_FORMAT)
                {
-                  dateTime = new Long(ZULU_DATE_FORMAT.parse(text).getTime());
+                  dateTime = Long.valueOf(ZULU_DATE_FORMAT.parse(text).getTime());
                }
                break;
             case 23:
                synchronized (ZULU_DATE_FORMAT_BC)
                {
-                  dateTime = new Long(ZULU_DATE_FORMAT_BC.parse(text).getTime());
+                  dateTime = Long.valueOf(ZULU_DATE_FORMAT_BC.parse(text).getTime());
                }
                break;
             case 24:
                synchronized (ZULU_DATE_FORMAT_MS)
                {
-                  dateTime = new Long(ZULU_DATE_FORMAT_MS.parse(text).getTime());
+                  dateTime = Long.valueOf(ZULU_DATE_FORMAT_MS.parse(text).getTime());
                }
                break;
             default:
